[gd_scene load_steps=15 format=3 uid="uid://c6dfidibu2j5g"]

[ext_resource type="Texture2D" uid="uid://c52xs35e2wn04" path="res://assets/img/panels/Panel_Containers.svg" id="1_3vj5e"]
[ext_resource type="Theme" uid="uid://d20giirqakg3w" path="res://resouces/themes/panel_gameplay.theme" id="1_dra1b"]
[ext_resource type="Script" path="res://scripts/interface/gameplay/element_info.gd" id="1_t2wcd"]
[ext_resource type="Texture2D" uid="uid://7pvoi7opcxls" path="res://assets/img/elements/Slot_0.png" id="3_mno6a"]
[ext_resource type="Texture2D" uid="uid://dorte8gvr7clr" path="res://resouces/atlas/main/close.tres" id="3_vtdi5"]
[ext_resource type="StyleBox" uid="uid://bhul54i7fb6xo" path="res://resouces/stylebox/label_bg_panel.stylebox" id="6_30wmq"]
[ext_resource type="Texture2D" uid="uid://bth7g2u105njl" path="res://assets/img/buttons/icons.svg" id="6_snuyk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_luu1q"]

[sub_resource type="LabelSettings" id="LabelSettings_mtplp"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_6cfcq"]
font_size = 14

[sub_resource type="AtlasTexture" id="AtlasTexture_isi1y"]
atlas = ExtResource("6_snuyk")
region = Rect2(958, 73, 211, 201)
margin = Rect2(20, 30, 40, 80)

[sub_resource type="LabelSettings" id="LabelSettings_sb47k"]
font_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_26iir"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 0.239216)

[sub_resource type="LabelSettings" id="LabelSettings_11s1g"]

[node name="element_info" type="PanelContainer"]
offset_right = 300.0
offset_bottom = 146.0
mouse_filter = 2
theme = ExtResource("1_dra1b")
theme_override_styles/panel = SubResource("StyleBoxEmpty_luu1q")
script = ExtResource("1_t2wcd")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_3vj5e")
region_rect = Rect2(506, 0, 277, 412)
patch_margin_left = 190
patch_margin_top = 73
patch_margin_right = 64
patch_margin_bottom = 73

[node name="close" type="TextureButton" parent="NinePatchRect"]
modulate = Color(0.764706, 0.827451, 0.870588, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_top = -9.0
offset_right = 10.0
offset_bottom = 15.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_vtdi5")
ignore_texture_size = true
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 23
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="element_profile" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="symbol" type="TextureRect" parent="MarginContainer/VBoxContainer/element_profile"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_mno6a")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/element_profile"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="name" type="Label" parent="MarginContainer/VBoxContainer/element_profile/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "NAME"
label_settings = SubResource("LabelSettings_mtplp")
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/element_profile/VBoxContainer"]
layout_mode = 2

[node name="serie" type="Label" parent="MarginContainer/VBoxContainer/element_profile/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
size_flags_horizontal = 3
text = "SERIE"
label_settings = SubResource("LabelSettings_6cfcq")
vertical_alignment = 2

[node name="star1" type="TextureRect" parent="MarginContainer/VBoxContainer/element_profile/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(19, 21)
layout_mode = 2
size_flags_horizontal = 8
texture = SubResource("AtlasTexture_isi1y")
expand_mode = 1

[node name="star2" type="TextureRect" parent="MarginContainer/VBoxContainer/element_profile/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(19, 21)
layout_mode = 2
size_flags_horizontal = 8
texture = SubResource("AtlasTexture_isi1y")
expand_mode = 1

[node name="star3" type="TextureRect" parent="MarginContainer/VBoxContainer/element_profile/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(19, 21)
layout_mode = 2
size_flags_horizontal = 8
texture = SubResource("AtlasTexture_isi1y")
expand_mode = 1

[node name="valentia" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="valentia_text" type="Label" parent="MarginContainer/VBoxContainer/valentia"]
layout_mode = 2
size_flags_horizontal = 3
text = "valentia:"
label_settings = SubResource("LabelSettings_sb47k")

[node name="extra_neutrons" type="Label" parent="MarginContainer/VBoxContainer/valentia"]
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_sb47k")

[node name="skill_effect_title" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
modulate = Color(0.772549, 1, 0.945098, 1)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_26iir")
text = "ELEMENT_EFFECT"
label_settings = SubResource("LabelSettings_11s1g")
vertical_alignment = 2

[node name="effect" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/normal = ExtResource("6_30wmq")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="molecule_effect_title" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
modulate = Color(1, 0.92549, 0.968627, 1)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_26iir")
text = "MOLECULE_EFFECT"
label_settings = SubResource("LabelSettings_11s1g")
vertical_alignment = 2

[node name="molecule_effect" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/normal = ExtResource("6_30wmq")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2

[connection signal="pressed" from="NinePatchRect/close" to="." method="_close_pressed"]
